Fix custom equalizer presets
Either, there are errors when activating a custom equalizer presets (because name is not known to core), or vlc crashes completely, see below.
0 libsystem_c.dylib 0x00007fff8cf2843e strstr + 50
1 libequalizer_plugin.dylib 0x0000000107fd151e EqzInit + 1534 (equalizer.c:387)
2 libequalizer_plugin.dylib 0x0000000107fd055e Open + 110 (equalizer.c:163)
3 libvlccore.5.dylib 0x00000001000d8661 generic_start + 129 (modules.c:351)
4 libvlccore.5.dylib 0x00000001000d838a module_load + 154 (modules.c:185)
5 libvlccore.5.dylib 0x00000001000d7f5b vlc_module_load + 1211 (modules.c:277)
6 libvlccore.5.dylib 0x00000001000d85d1 module_need + 65 (modules.c:366)
7 libvlccore.5.dylib 0x00000001000c03db CreateFilter + 267 (filters.c:400)
8 libvlccore.5.dylib 0x00000001000bf89e aout_FiltersNew + 1310 (filters.c:496)
9 libvlccore.5.dylib 0x00000001000be988 aout_CheckReady + 504
10 libvlccore.5.dylib 0x00000001000be5c8 aout_DecPlay + 328
11 libvlccore.5.dylib 0x0000000100076a86 DecoderPlayAudio + 854 (decoder.c:1235)
12 libvlccore.5.dylib 0x0000000100076641 DecoderDecodeAudio + 353 (decoder.c:1293)
13 libvlccore.5.dylib 0x0000000100074dd8 DecoderProcessAudio + 408 (decoder.c:1896)
14 libvlccore.5.dylib 0x00000001000748a9 DecoderProcess + 393 (decoder.c:2015)
15 libvlccore.5.dylib 0x0000000100074691 DecoderThread + 193 (decoder.c:941)
16 libsystem_c.dylib 0x00007fff8ceea742 _pthread_start + 327
17 libsystem_c.dylib 0x00007fff8ced7181 thread_start + 13