equalizer: fix crash and allow custom eq-band values without known preset

close #8307